# Shiza-programming-language

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  shiza
re1nhart/: Makefile
src/: Makefile  ast.h  ast_deprecated.h  debugging.cc  errors.cc  global.cc  helpers.cc  keywords.cc  main  main.bmx  main.cc  main.cpp  main.rs  playground.cc
src/argv/: opts.cc
src/docs/: SHIZA_CFG.json  data-structures.txt  syntax.txt  toroni.bmx  types.txt
src/docs/tools/: urls.txt
src/docs/trashbin/: 1.txt
src/examples/: main.bmx
src/internal/: fst.rs  mod.rs
src/internal/argv/: args.rs
src/internal/kernel/: mod.rs
src/internal/kernel/ast/: mod.rs
src/playground/: fs1.bmx
src/syntax_testing/: buzz.txt  tester.cc  tester.hh
src/syntax_testing/module_test/: module_test.cpp  module_test.hpp
src/system/logging/: logger.cc
